[package]
name = "s2"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "wad"
]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
wad = { version = "0.1.0", path = "wad" }
