[package]
name = "s2"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "collision", "level", "triangles",
  "wad"
]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
collision = { version = "0.1.0", path = "collision" }
level = { version = "0.1.0", path = "level" }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
triangles = { version = "0.1.0", path = "triangles" }
wad = { version = "0.1.0", path = "wad" }
